# grpc-file-processor

./: README.md
client_cpp/: CMakeLists.txt  client.cc
client_python/: client.py
proto/: file_processor.proto  server.cpp
server_cpp/: CMakeLists.txt  file_processor_service_impl.cc  file_processor_service_impl.h  server.cc
